Version 1.0.74 Fixes layout issue in editable select-editor

--- a/addon/styles/components/_editor.scss
+++ b/addon/styles/components/_editor.scss
@@ -724,7 +724,7 @@
     }
   }
   &.tr-select-editor-below {
-    margin-top: -1px;
+    //margin-top: -1px;
     box-shadow: 0 5px 20px -7px $color-foreground;
     > div {
       //border-radius: 0 0 4px 4px;
